# lisa

./: .dir-locals.el  .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  .readthedocs.yml  .rustfmt.toml  .travis.yml  Android-Tools-for-Tracing.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Energy-Meters-Requirements.md  Home.md  Installation.md  Integrating-a-new-board-in-LISA.md  LisaShell.txt  MANIFEST.in  Quickstart-Tutorial.md  README  README.md  README.rst  Target-platform-requirements.md  Vagrantfile  Virtual-Machine-based-installation.md  _Sidebar.md  devmode_requirements.txt  get_wlat.py  get_wlat_cbs.py  init_env  install_base.sh  install_base_ubuntu.sh  logging.conf  pyproject.toml  pytest.ini  requirements.txt  run_me_once.sh  setup.cfg  setup.py  target.config  (+4 more)
.github/: pr_message.md
assets/: mp3-short.json
bart/: SchedAssert.py  SchedMatrix.py  SchedMultiAssert.py  ThermalAssert.py  Utils.py  __init__.py  version.py
ci/: autobranch-job-script.sh
cr2/: __init__.py  base.py  compare_runs.py  cpu_power.py  cr2.py  devfreq_power.py  dynamic.py  pi_controller.py  pid_controller.py  plot_utils.py  power.py  results.py  run.py  sched.py  thermal.py
dev_scripts/: README  clean_install  clear_env  copyright_updater  get_apk_versions  pep8  pylint  pylint_plugins.py  rebuild_all_uiauto
devlib/: __init__.py  connection.py  exception.py  host.py  target.py
doc/: .gitignore  00 - Quick start.ipynb  BarPlotter.ipynb  Displaying results.ipynb  Dynamic traces.ipynb  FTrace class.ipynb  InteractivePlotter.ipynb  Makefile  Plotter.ipynb  PlotterPermute.ipynb  Run class.ipynb  Stats.ipynb  analysis.rst  api_separator.rst  automated_testing.rst  bisector  bisector.rst  build_extension_docs.py  build_instrument_method_map.py  build_instrumentation_method_map.py  build_plugin_docs.py  changes.rst  collectors.rst  compare runs.ipynb  conf.py  connection.rst  contributors_guide.rst  derived_measurements.rst  doc_requirements.txt  energy_analysis.rst  exekall  exekall.rst  first_separator.rst  getting_started.rst  guides_separator.rst  index.rst  install.rst  instrumentation.rst  internals.rst  kernel_tests.rst  (+26 more)
extras/: Dockerfile  README  pylintrc  walog.vim
hooks/: pre-commit
ipynb/: ipyserver_start  ipyserver_stop  (+1 more)
lisa/_assets/kmodules/lisa/rust/lisakmod/: Cargo.toml  bindings.h  cbindgen.h  cbindgen.toml  runtime.c  rust.lds  tests.c  tests.h
lisa/_assets/kmodules/lisa/rust/lisakmod-macros/: Cargo.toml  cffi.h
lisa/_assets/kmodules/lisa/rust/lisakmod-macros/macros/: Cargo.toml
lisa/_assets/kmodules/lisa/rust/lisakmod-macros/macros/src/: inlinec.rs  lib.rs  misc.rs
lisa/_assets/kmodules/lisa/rust/lisakmod-macros/src/: inlinec.rs  lib.rs  misc.rs
lisa/_assets/kmodules/lisa/rust/lisakmod-macros/src/private/: misc.rs  mod.rs
lisa/_assets/kmodules/lisa/rust/lisakmod-macros/tests/: inlinec.rs
lisa/_assets/kmodules/lisa/rust/lisakmod/rustc_targets/: README.md
lisa/_assets/kmodules/lisa/rust/lisakmod/rustc_targets/arm64/: target.json
lisa/_assets/kmodules/lisa/rust/lisakmod/rustc_targets/x86_64/: target.json
lisa/_assets/kmodules/lisa/rust/lisakmod/src/: error.rs  fmt.rs  graph.rs  init.rs  inlinec.rs  lib.rs  lifecycle.rs  mem.rs  misc.rs  parsec.rs  prelude.rs  query.rs  refstore.rs  registry.rs  tests.rs  typemap.rs  version.rs
lisa/_assets/kmodules/lisa/rust/lisakmod/src/features/: all.rs  legacy.rs  mod.rs  pixel6.rs  pmu.rs  tests.rs  thermal.rs  tracepoint.rs  wq.rs
lisa/_assets/kmodules/lisa/rust/lisakmod/src/features/events/: mod.rs
lisa/_assets/kmodules/lisa/rust/lisakmod/src/runtime/: alloc.rs  cpumask.rs  fs.rs  irqflags.rs  kbox.rs  mod.rs  module.rs  panic.rs  printk.rs  sync.rs  synth_traceevent.rs  sysfs.rs  traceevent.rs  tracepoint.rs  version.rs  wq.rs
lisa/_assets/kmodules/lisa/rust/proc_macros/lisakmodprocmacro_macro/: Cargo.toml
lisa/_assets/kmodules/lisa/rust/proc_macros/lisakmodprocmacro_macro/src/: inlinec.rs  lib.rs
tools/analysis/analysis/: Cargo.toml  build.rs
tools/analysis/analysis/src/: arrow.rs  event.rs  eventreq.rs  futures.rs  lib.rs  string.rs
tools/analysis/analysis/src/analysis/: mod.rs  tasks.rs
tools/analysis/trace-tools/fuzz/: Cargo.toml
tools/analysis/trace-tools/fuzz/fuzz_targets/: print.rs
tools/analysis/traceevent/: Cargo.toml
tools/analysis/traceevent/src/: buffer.rs  cinterp.rs  compress.rs  cparser.rs  header.rs  lib.rs  parser.rs  print.rs  scratch.rs
tools/analysis/userspace/: Cargo.toml
tools/analysis/userspace/src/: main.rs
tools/batch-rebase/: pyproject.toml
tools/batch-rebase/src/batch_rebase/: main.py
tools/exekall/: README.rst  main.py  pyproject.toml  setup.py  utils.py
tools/exekall/doc/: README  index.rst  internal_api.rst  public_api.rst  self_tests.rst
tools/exekall/doc/man/: conf.py  man.rst
tools/exekall/exekall/: _utils.py  customization.py  engine.py  main.py  utils.py
tools/exekall/exekall/tests/: exekall_customize.py  suite.py  testcode.py  utils.py
tools/exekall/exekall/tests/test3/test2/: other.py
tools/exekall/src/exekall/: _utils.py  engine.py  main.py  utils.py  valuedb.py
tools/exekall/src/exekall/_tests/: exekall_customize.py  suite.py
tools/exekall/tests/: factorytest.py
tools/exekall/tests/test3/test2/: __init__.py
tools/lisa-combine-gitlab-mr/: pyproject.toml
tools/lisa-combine-gitlab-mr/src/lisa_combine_gitlab_mr/: main.py
tools/trace-parser/trace-tools/: .gitignore  Cargo.toml
tools/trace-parser/trace-tools/fuzz/fuzz_targets/: print.rs
tools/trace-parser/trace-tools/src/lib/: check.rs  error.rs  lib.rs  parquet.rs  print.rs
tools/trace-parser/trace-tools/src/lib/parquet/: dump.rs
tools/trace-parser/trace-tools/src/lib/tracedat/: check.rs  mod.rs  print.rs
tools/trace-parser/trace-tools/src/lib/tracedat/parquet/: dump.rs  mod.rs
tools/trace-parser/traceevent/: Cargo.toml
tools/trace-parser/traceevent/src/: array.rs  buffer.rs  cinterp.rs  closure.rs  compress.rs  cparser.rs  error.rs  grammar.rs  header.rs  io.rs  iterator.rs  lib.rs  memo.rs  nested_pointer.rs  parser.rs  print.rs  scratch.rs  str.rs
(+1884 files in other folders)
