[project]
name = "lisa-combine-gitlab-mr"  # Required
version = "1.0.0"  # Required
description = "Combine GitLab merge requests with the given labels for the specified project"  
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["git", "development"]  

# readme = "README.md"
authors = [
	{name = "Douglas RAILLARD"}
]
maintainers = [
	{name = "Arm Ltd." }
]

# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [  # Optional
	# How mature is this project? Common values are
	#   3 - Alpha
	#   4 - Beta
	#   5 - Production/Stable
	"Development Status :: 4 - Beta",

	# Indicate who your project is intended for
	"Intended Audience :: Developers",
	"Topic :: Software Development :: Build Tools",

	# This is not a standard classifier, as there is nothing defined for
	# Apache 2.0 yet:
	# https://pypi.org/classifiers/
]

dependencies = [
	# To query GitLab API
	"requests",
	"batch-rebase @ file:///${PROJECT_ROOT}/../batch-rebase/",
]

[project.urls]
"Homepage" = "https://gitlab.arm.com/tooling/lisa"
"Source" = "https://gitlab.arm.com/tooling/lisa"
"Documentation" = "https://tooling.sites.arm.com/lisa/"
"Bug Tracker" = "https://gitlab.arm.com/tooling/lisa/-/issues"

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
[project.scripts]  # Optional
lisa-combine-gitlab-mr = "lisa_combine_gitlab_mr.main:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
