[package]
name = "trace-tools"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
traceevent = { path = "../traceevent" }

thiserror = "1.0"
smartstring = {version = "1.0", features = ["serde"]}
arrow = { version = "52.0", default-features = false }
arrow-schema = { version = "52.0", default-features = false }
arrow-array = { version = "52.0" }
parquet = { version = "52.0", default-features = false, features = ["arrow", "lz4", "zstd", "snap" ] }

crossbeam = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
nom = "7.1"
bytemuck = "1.13"
clap = { version = "4.4", features = ["derive"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
mimalloc = {version = "0.1", default-features = false }

[profile.release-lisa]
inherits = "release"
debug = false
strip = true
opt-level = 3

# Static build:
# rustup target add x86_64-unknown-linux-musl
# RUSTFLAGS='-C target-feature=+crt-static' cargo build --release --target x86_64-unknown-linux-musl
