[package]
name = "trace-tools-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[target.'cfg(target_arch = "x86_64")'.dependencies]
mimalloc = {version = "0.1", default-features = false }

[dependencies.trace-tools]
path = ".."

[dependencies.traceevent]
path = "../../traceevent/"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "print"
path = "fuzz_targets/print.rs"
test = false
doc = false
