[package]
name = "lisakmod_macros"
version = "0.1.0"
edition = "2024"

[dependencies]
lisakmod_macros_proc = { path = "./macros" }
paste = "1.0"

[features]
# This feature is set by the lisakmod crate when compiling for tests. This way,
# it allows us to know we are being built for test and e.g. not create "unsafe
# extern "C"" functions.
test = []
