[package]
name = "lisakmod"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
anyhow = { version = "1.0", default-features = false }
itertools = {version = "0.13", default-features = false, features = ["use_alloc"]}
linkme = "0.3.31"
# hashbrown = "0.15"
lisakmod_macros = { path = "../lisakmod-macros" }

[profile.release]
panic = 'abort'
strip = "debuginfo"

[profile.dev]
panic = 'abort'
