[package]
name = "lisakmod"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
anyhow = { version = "1.0", default-features = false }
embedded-io = {version = "0.6.1", default-features = false, features = ["alloc"]}
itertools = {version = "0.14", default-features = false, features = ["use_alloc"]}
linkme = "0.3.31"
# hashbrown = "0.15"
lisakmod_macros = { path = "../lisakmod-macros" }
pin-project = "1.1"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
lisakmod_macros = { path = "../lisakmod-macros", features = ["test"] }

[features]
# Useless feature that is only there so that lisakmod_macros can use
# cfg(feature = "test") in its generated code.
test = []

[profile.release]
panic = 'abort'
strip = "debuginfo"

[profile.dev]
panic = 'abort'
